--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,18 +22,8 @@ jobs:
       if: steps['release']['outputs']['published'] == 'true'
       uses: docker/login-action@v1
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: ${{ secrets.DOCKERHUB_USER }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Docker meta
-      if: steps['release']['outputs']['published'] == 'true'
-      id: meta
-      uses: crazy-max/ghaction-docker-meta@v2
-      with:
-        images: kong/fpm
-        tags: |
-          type=semver,pattern={{version}},value=${{ steps.release.outputs.release-version }}
-          type=ref,event=branch
-          type=sha
     - name: Set up QEMU
       if: steps['release']['outputs']['published'] == 'true'
       id: qemu
@@ -44,11 +34,20 @@ jobs:
     - name: Setup buildx
       if: steps['release']['outputs']['published'] == 'true'
       uses: docker/setup-buildx-action@v1
+    - name: Docker meta
+      if: steps['release']['outputs']['published'] == 'true'
+      id: meta
+      uses: crazy-max/ghaction-docker-meta@v3
+      with:
+        images: kong/fpm
+        tags: |
+          type=semver,pattern={{version}},value=${{ steps.release.outputs.release-version }}
+          type=ref,event=branch
+          type=sha
     - name: Build
       if: steps['release']['outputs']['published'] == 'true'
       uses: docker/bake-action@v1
       with:
-        push: true
         files: |
           ./docker-bake.hcl
           ${{ steps.meta.outputs.bake-file }}
