--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@
 name: Create Github and Docker Release
 
 on:  # yamllint disable-line rule:truthy
+  pull_request:
   push:
     branches:
     - main
@@ -25,17 +26,14 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Set up QEMU
-      if: steps['release']['outputs']['published'] == 'true'
       id: qemu
       uses: docker/setup-qemu-action@v1
       with:
         image: tonistiigi/binfmt:latest
         platforms: all
     - name: Setup buildx
-      if: steps['release']['outputs']['published'] == 'true'
       uses: docker/setup-buildx-action@v1
     - name: Docker meta
-      if: steps['release']['outputs']['published'] == 'true'
       id: meta
       uses: crazy-max/ghaction-docker-meta@v3
       with:
@@ -44,11 +42,18 @@ jobs:
           type=semver,pattern={{version}},value=${{ steps.release.outputs.release-version }}
           type=ref,event=branch
           type=sha
-    - name: Build
+    - name: Build Only
+      uses: docker/bake-action@v1
+      with:
+        files: |
+          ./docker-bake.hcl
+          ${{ steps.meta.outputs.bake-file }}
+        targets: build
+    - name: Build & Push
       if: steps['release']['outputs']['published'] == 'true'
       uses: docker/bake-action@v1
       with:
-        push: true
+        push: 'true'
         files: |
           ./docker-bake.hcl
           ${{ steps.meta.outputs.bake-file }}
