--- a/.github/workflows/cron-docker-latest.yml
+++ b/.github/workflows/cron-docker-latest.yml
@@ -1,26 +1,18 @@
 ---
-name: Create Github and Docker Release
+name: Refresh the latest docker tag
 
 on:  # yamllint disable-line rule:truthy
-  pull_request:
-  push:
-    branches:
-    - main
+  schedule:
+  - cron: 0 8 * * *
 
 jobs:
   release:
-    name: Create Release
+    name: 
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Release
-      id: release
-      uses: ahmadnassri/action-semantic-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Login to DockerHub
-      if: steps['release']['outputs']['published'] == 'true'
       uses: docker/login-action@v1
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -39,9 +31,7 @@ jobs:
       with:
         images: kong/fpm
         tags: |
-          type=semver,pattern={{version}},value=${{ steps.release.outputs.release-version }}
           type=ref,event=branch
-          type=sha
     - name: Build Only
       uses: docker/bake-action@v1
       with:
@@ -50,7 +40,6 @@ jobs:
           ${{ steps.meta.outputs.bake-file }}
         targets: build
     - name: Build & Push
-      if: steps['release']['outputs']['published'] == 'true'
       uses: docker/bake-action@v1
       with:
         push: 'true'
