--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,5 +1,5 @@
 ---
-name: Create Github and Docker Release
+name: Build and Optionally Release
 
 on:  # yamllint disable-line rule:truthy
   pull_request:
@@ -8,53 +8,27 @@ on:  # yamllint disable-line rule:truthy
     - main
 
 jobs:
+  build:
+    name: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v1
+    - name: Setup buildx
+      uses: docker/setup-buildx-action@v1
+    - name: Build using Docker bake
+      uses: docker/bake-action@v1
+
   release:
-    name: Create Release
+    name: release
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@v2
     - name: Release
-      id: release
       uses: ahmadnassri/action-semantic-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: Login to DockerHub
-      if: steps['release']['outputs']['published'] == 'true'
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Set up QEMU
-      id: qemu
-      uses: docker/setup-qemu-action@v1
-      with:
-        image: tonistiigi/binfmt:latest
-        platforms: all
-    - name: Setup buildx
-      uses: docker/setup-buildx-action@v1
-    - name: Docker meta
-      id: meta
-      uses: crazy-max/ghaction-docker-meta@v3
-      with:
-        images: kong/fpm
-        tags: |
-          type=semver,pattern={{version}},value=${{ steps.release.outputs.release-version }}
-          type=ref,event=branch
-          type=sha
-    - name: Build Only
-      uses: docker/bake-action@v1
-      with:
-        files: |
-          ./docker-bake.hcl
-          ${{ steps.meta.outputs.bake-file }}
-        targets: build
-    - name: Build & Push
-      if: steps['release']['outputs']['published'] == 'true'
-      uses: docker/bake-action@v1
-      with:
-        push: 'true'
-        files: |
-          ./docker-bake.hcl
-          ${{ steps.meta.outputs.bake-file }}
-        targets: build
