--- a/Dockerfile.amd64
+++ b/Dockerfile.amd64
@@ -1,4 +1,4 @@
-FROM ubuntu:xenial
+FROM amd64/ubuntu:xenial
 
 ENV DEBIAN_FRONTEND noninteractive
 
@@ -16,9 +16,8 @@ RUN set -x \
         ruby-ffi \
         rpm \
         git \
-    && apt-get install --reinstall -y bash
-
-RUN gem install fpm \
+    && apt-get install --reinstall -y bash \
+    && gem install fpm \
     && mkdir /src/ \
     && fpm --version
 
