--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,31 +1,43 @@
 ---
-name: automerge
-on:  # yamllint disable-line rule:truthy
-  pull_request:
-    types:
-    - labeled
-    - unlabeled
-    - synchronize
-    - opened
-    - edited
-    - ready_for_review
-    - reopened
-    - unlocked
-  pull_request_review:
-    types:
-    - submitted
-  check_suite:
-    types:
-    - completed
-  status: {}
+name: Auto Merge
+
+on: # yamllint disable-line rule:truthy
+  pull_request_target:
+    types: [labeled, unlabeled, synchronize, review_requested, opened, reopened]
+
 jobs:
-  automerge:
+  auto-approve-github-actions:
+    runs-on: ubuntu-latest
+    if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+    steps:
+    - uses: hmarr/auto-approve-action@v2.1.0
+      #if: github.event.label.name == 'github_actions'
+      if: >-
+        contains( github.event.pull_request.labels.*.name, 'github_actions')
+        ||
+        (
+          contains( github.event.pull_request.labels.*.name, 'dependencies')
+          &&
+          ! contains( github.event.pull_request.labels.*.name, 'core_pulp_modules')
+        )
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  auto-merge:
+    name: Enable automerge on jobs with relevant labels
     runs-on: ubuntu-latest
     steps:
-    - name: automerge
-      uses: pascalgn/automerge-action@v0.12.0
-      env:
-        MERGE_LABELS: ''
-        MERGE_METHOD_LABELS: automerge=merge,autosquash=squash
-        MERGE_METHOD_LABEL_REQUIRED: 'true'
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: alexwilson/enable-github-automerge-action@main
+      if: >-
+        contains( github.event.pull_request.labels.*.name, 'github_actions')
+        ||
+        contains( github.event.pull_request.labels.*.name, 'automerge')
+        ||
+        (
+          contains( github.event.pull_request.labels.*.name, 'dependencies')
+          &&
+          ! contains( github.event.pull_request.labels.*.name, 'core_pulp_modules')
+        )
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        merge-method: SQUASH
