--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,43 +1,31 @@
 ---
-name: Auto Merge
+name: Auto Actions
 
 on: # yamllint disable-line rule:truthy
   pull_request_target:
     types: [labeled, unlabeled, synchronize, review_requested, opened, reopened]
 
-jobs:
-  auto-approve-github-actions:
-    runs-on: ubuntu-latest
-    if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
-    steps:
-    - uses: hmarr/auto-approve-action@v2.1.0
-      #if: github.event.label.name == 'github_actions'
-      if: >-
-        contains( github.event.pull_request.labels.*.name, 'github_actions')
-        ||
-        (
-          contains( github.event.pull_request.labels.*.name, 'dependencies')
-          &&
-          ! contains( github.event.pull_request.labels.*.name, 'core_pulp_modules')
-        )
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+permissions:
+  pull-requests: write
+  contents: write
 
-  auto-merge:
-    name: Enable automerge on jobs with relevant labels
+jobs:
+  dependabot-automerge:
     runs-on: ubuntu-latest
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
-    - uses: alexwilson/enable-github-automerge-action@main
-      if: >-
-        contains( github.event.pull_request.labels.*.name, 'github_actions')
-        ||
-        contains( github.event.pull_request.labels.*.name, 'automerge')
-        ||
-        (
-          contains( github.event.pull_request.labels.*.name, 'dependencies')
-          &&
-          ! contains( github.event.pull_request.labels.*.name, 'core_pulp_modules')
-        )
+    - name: Gather Dependabot metadata
+      id: metadata
+      uses: dependabot/fetch-metadata@v1.1.1
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        merge-method: SQUASH
+        github-token: ${{ secrets.AUTO_MERGE_TOKEN }}
+    - name: Approve PR
+      run: gh pr review --approve "$PR_URL"
+      env:
+        PR_URL: ${{github.event.pull_request.html_url}}
+        AUTO_MERGE_TOKEN: ${{secrets.AUTO_MERGE_TOKEN}}
+    - name: Enable auto-merge
+      run: gh pr merge --auto --squash "$PR_URL"
+      env:
+        PR_URL: ${{github.event.pull_request.html_url}}
+        AUTO_MERGE_TOKEN: ${{secrets.AUTO_MERGE_TOKEN}}
