--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,7 +1,10 @@
 ---
 name: Auto Actions
 
-on: # yamllint disable-line rule:truthy
+on:  # yamllint disable-line rule:truthy
+  pull_request:
+    branches:
+    - main
   pull_request_target:
     types: [labeled, unlabeled, synchronize, review_requested, opened, reopened]
 
