--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,7 +1,7 @@
 ---
 name: Auto Actions
 
-on:  # yamllint disable-line rule:truthy
+on: # yamllint disable-line rule:truthy
   pull_request_target:
     types: [labeled, unlabeled, synchronize, review_requested, opened, reopened]
 
@@ -18,14 +18,14 @@ jobs:
       id: metadata
       uses: dependabot/fetch-metadata@v1.1.1
       with:
-        github-token: ${{ secrets.AUTO_MERGE_TOKEN }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
     - name: Approve PR
       run: gh pr review --approve "$PR_URL"
       env:
         PR_URL: ${{github.event.pull_request.html_url}}
-        GITHUB_TOKEN: ${{secrets.AUTO_MERGE_TOKEN}}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - name: Enable auto-merge
       run: gh pr merge --auto --squash "$PR_URL"
       env:
         PR_URL: ${{github.event.pull_request.html_url}}
-        GITHUB_TOKEN: ${{secrets.AUTO_MERGE_TOKEN}}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
