--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,15 +1,10 @@
 ---
 name: Auto Actions
 
-on: # yamllint disable-line rule:truthy
-  pull_request_target:
-    types: [labeled, unlabeled, synchronize, review_requested, opened, reopened]
+on: pull_request_target # yamllint disable-line rule:truthy
 
 permissions:
-  actions: write
   contents: write
-  deployments: write
-  packages: write
   pull-requests: write
 
 
@@ -32,4 +27,4 @@ jobs:
       run: gh pr merge --auto --squash "$PR_URL"
       env:
         PR_URL: ${{github.event.pull_request.html_url}}
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        GITHUB_TOKEN: ${{secrets.AUTO_MERGE_TOKEN}}
