--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,19 @@ jobs:
         platforms: all
     - name: Setup buildx
       uses: docker/setup-buildx-action@v1
+    - name: Build Only
+      uses: docker/bake-action@v1
+      with:
+        files: |
+          ./docker-bake.hcl
+        targets: default
+    - name: Release
+      id: release
+      uses: ahmadnassri/action-semantic-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Docker meta
+      if: steps['release']['outputs']['published'] == 'true'
       id: meta
       uses: crazy-max/ghaction-docker-meta@v3
       with:
@@ -31,18 +43,6 @@ jobs:
           type=semver,pattern={{version}},value=${{ steps.release.outputs.release-version }}
           type=ref,event=branch
           type=sha
-    - name: Build Only
-      uses: docker/bake-action@v1
-      with:
-        files: |
-          ./docker-bake.hcl
-          ${{ steps.meta.outputs.bake-file }}
-        targets: default
-    - name: Release
-      id: release
-      uses: ahmadnassri/action-semantic-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Login to DockerHub
       if: steps['release']['outputs']['published'] == 'true'
       uses: docker/login-action@v1
