--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         files: |
           ./docker-bake.hcl
-        targets: default
+        targets: build
     - name: Release
       id: release
       uses: ahmadnassri/action-semantic-release@v1
@@ -57,4 +57,4 @@ jobs:
         files: |
           ./docker-bake.hcl
           ${{ steps.meta.outputs.bake-file }}
-        targets: default
+        targets: build
