--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
       id: meta
       uses: crazy-max/ghaction-docker-meta@v3
       with:
-        images: hutchic/fpm
+        images: kong/fpm
         tags: |
           type=semver,pattern={{version}},value=${{ steps.release.outputs.release-version }}
           type=ref,event=branch
