--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,31 +1,30 @@
 ---
-name: automerge
-on:  # yamllint disable-line rule:truthy
-  pull_request:
-    types:
-    - labeled
-    - unlabeled
-    - synchronize
-    - opened
-    - edited
-    - ready_for_review
-    - reopened
-    - unlocked
-  pull_request_review:
-    types:
-    - submitted
-  check_suite:
-    types:
-    - completed
-  status: {}
+name: Auto Actions
+
+on: pull_request_target # yamllint disable-line rule:truthy
+
+permissions:
+  contents: write
+  pull-requests: write
+
+
 jobs:
-  automerge:
+  dependabot-automerge:
     runs-on: ubuntu-latest
+    if: ${{ github.actor == 'dependabot[bot]' }}
     steps:
-    - name: automerge
-      uses: pascalgn/automerge-action@v0.12.0
+    - name: Gather Dependabot metadata
+      id: metadata
+      uses: dependabot/fetch-metadata@v1.1.1
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+    - name: Approve PR
+      run: gh pr review --approve "$PR_URL"
       env:
-        MERGE_LABELS: ''
-        MERGE_METHOD_LABELS: automerge=merge,autosquash=squash
-        MERGE_METHOD_LABEL_REQUIRED: 'true'
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PR_URL: ${{github.event.pull_request.html_url}}
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    - name: Enable auto-merge
+      run: gh pr merge --auto --squash "$PR_URL"
+      env:
+        PR_URL: ${{github.event.pull_request.html_url}}
+        GITHUB_TOKEN: ${{secrets.AUTO_MERGE_TOKEN}}
